--- a/vto_odoo_courses/views/course_views.xml
+++ b/vto_odoo_courses/views/course_views.xml
@@ -47,7 +47,7 @@
         <field name="name">Courses</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">odoo.course</field>
-        <field name="view_model">tree,form</field>
+        <field name="view_mode">tree,form</field>
         <field name="search_view_id" ref="odoo_course_search_view" />
         <field name="context">{}</field>
         <field name="help" type="html">
