--- a/vto_odoo_courses/views/partner_views.xml
+++ b/vto_odoo_courses/views/partner_views.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <record id="view_partner_form" model="ir.ui.view">
+        <field name="name">partner</field>
+        <field name="model">res.partner</field>
+        <field name="priority">25</field>
+        <field name="mode">primary</field>
+        <field name="inherit_id" ref="base.view_partner_form"/>
+        <field name="arch" type="xml">
+          <field name="function" position="before">
+            <field name="instructors_number" />
+          </field>
+        </field>
+    </record>
+
     <!-- Action to call instructors data -->
     <record id="action_contact_instructors" model="ir.actions.act_window">
         <field name="name">Instructor</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">res.partner</field>
-        <field name="view_mode">kanban,tree,form,activity</field>
+        <field name="view_mode">kanban,tree,form</field>
         <field name="search_view_id" ref="base.view_res_partner_filter" />
         <field name="context">{'default_is_company': False}</field>
         <field name="help" type="html">
@@ -33,10 +46,10 @@
     </record>
 
     <record id="action_contact_instructors_view_form" model="ir.actions.act_window.view">
-        <field name="sequence" eval="2" />
+        <field name="sequence" eval="2"/>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="base.view_partner_form" />
-        <field name="act_window_id" ref="action_contact_instructors" />
+        <field name="view_id" ref="vto_odoo_courses.view_partner_form"/>
+        <field name="act_window_id" ref="action_contact_instructors"/>
     </record>
 
     <menuitem id="res_partner_instructor_menu"
@@ -44,6 +57,20 @@
         action="action_contact_instructors"
         parent="odoo_course_partner_menu"
         sequence="2" />
+
+<!-- =================================================================================== -->
+    <!-- <record id="view_partner_form2" model="ir.ui.view">
+        <field name="name">partnera</field>
+        <field name="model">res.partner</field>
+        <field name="priority">25</field>
+        <field name="mode">primary</field>
+        <field name="inherit_id" ref="base.view_partner_form"/>
+        <field name="arch" type="xml">
+          <field name="function" position="before">
+            <field name="attendees_number" />
+          </field>
+        </field>
+    </record> -->
 
     <!-- Action to call attendees data -->
     <!-- <record id="action_contact_attendees" model="ir.actions.act_window">
@@ -55,64 +82,39 @@
         <field name="context">{'default_is_company': False}</field>
         <field name="help" type="html">
             <p class="o_view_nocontent_smiling_face">
-                Create an Attendees in your address book
+                Create an Instructor in your address book
             </p>
             <p>
-                Odoo helps you to easily track all activities related to an course attendees
+                Odoo helps you to easily track all activities related to an instructors
             </p>
         </field>
     </record> -->
 
-    <!-- Action to call attendees data -->
-    <record id="action_contact_attendees" model="ir.actions.act_window">
-        <field name="name">Attendees Custom</field>
-        <field name="type">ir.actions.act_window</field>
-        <field name="res_model">res.partner</field>
-        <field name="view_mode">kanban,tree,form,activity</field>
-        <field name="search_view_id" ref="base.view_res_partner_filter" />
-        <field name="context">{'default_is_company': False}</field>
-        <field name="arch" type="xml">
-            <form string="Odoo Attendees">
-                <sheet>
-                    <group>
-                        <group name="kelompok_kiri">
-                            <!-- <field name="name" placeholder="e.g. Functional Training" /> -->
-                        </group>
-                        <group name="kelompok_kanan">
-                            <field name="attendees_number" />
-                        </group>
-                    </group>
-                </sheet>
-            </form>
-        </field>
-        <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">
-                Create an Attendees in your address book
-            </p>
-            <p>
-                Odoo helps you to easily track all activities related to an course attendees
-            </p>
-        </field>
-    </record>
-
-    <record id="action_contact_attendees_view_kanban" model="ir.actions.act_window.view">
-        <field name="sequence" eval="0" />
+    <!-- <record id="action_contact_attendees_view_kanban" model="ir.actions.act_window.view">
+        <field name="sequence" eval="0"/>
         <field name="view_mode">kanban</field>
-        <field name="view_id" ref="base.res_partner_kanban_view" />
-        <field name="act_window_id" ref="action_contact_attendees" />
-    </record>
+        <field name="view_id" ref="base.res_partner_kanban_view"/>
+        <field name="act_window_id" ref="action_contact_attendees"/>
+    </record> -->
 
-    <record id="action_contact_attendees_view_tree" model="ir.actions.act_window.view">
+    <!-- <record id="action_contact_attendees_view_tree" model="ir.actions.act_window.view">
         <field name="sequence" eval="1" />
         <field name="view_mode">tree</field>
         <field name="view_id" ref="base.view_partner_tree" />
         <field name="act_window_id" ref="action_contact_attendees" />
     </record>
 
+    <record id="action_contact_attendees_view_form" model="ir.actions.act_window.view">
+        <field name="sequence" eval="2" />
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="vto_odoo_courses.view_partner_form2" />
+        <field name="act_window_id" ref="action_contact_attendees" />
+    </record>
+
+
     <menuitem id="res_partner_attendees_menu"
         name="Attendees"
         action="action_contact_attendees"
         parent="odoo_course_partner_menu"
-        sequence="3" />
-    
+        sequence="3" /> -->
 </odoo>
