--- a/vto_odoo_courses/views/test.xml
+++ b/vto_odoo_courses/views/test.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="res_partner_instructors_form_view" model="ir.ui.view">
+    <!-- <record id="res_partner_instructors_form_view" model="ir.ui.view">
         <field name="name">res.partner.instructors.form</field>
         <field name="model">res.partner</field>
         <field name="priority">50</field>
@@ -19,7 +19,7 @@
                 </sheet>
             </form>
         </field>
-    </record>
+    </record> -->
     <!-- <record id="view_partner_form" model="ir.ui.view">
         <field name="name">partner</field>
         <field name="model">res.partner</field>
@@ -68,8 +68,8 @@
     <record id="action_contact_instructors_view_form" model="ir.actions.act_window.view">
         <field name="sequence" eval="2"/>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="vto_odoo_courses.res_partner_instructors_form_view"/>
-        <!-- <field name="view_id" ref="base.view_partner_form"/> -->
+        <!-- <field name="view_id" ref="vto_odoo_courses.res_partner_instructors_form_view"/> -->
+        <field name="view_id" ref="base.view_partner_form"/>
         <field name="act_window_id" ref="action_contact_instructors"/>
     </record>
 
