--- a/DVS_Mobile_Apps/app/src/main/res/layout/activity_splash_screen.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".SplashScreenActivity">
 
+    <ImageView
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:src="@drawable/ic_logo_dvs_foreground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
