--- a/DVS_Mobile_Apps/app/src/main/res/layout/item_product.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/item_product.xml
@@ -18,14 +18,14 @@
         android:layout_marginStart="16dp">
 
         <TextView
-            android:id="@+id/tv_product_name"
+            android:id="@+id/tv_product_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tv_product_desc"
+            android:id="@+id/tv_product_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="14sp"
