--- a/DVS_Mobile_Apps/app/src/main/res/layout/activity_login.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,7 @@
         android:layout_marginTop="20dp"
         android:hint="Password"
         android:inputType="textPassword"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/et_username"
         app:layout_constraintStart_toStartOf="@+id/et_username"
         app:layout_constraintTop_toBottomOf="@+id/et_username" />
@@ -53,6 +54,15 @@
         app:layout_constraintEnd_toEndOf="@+id/et_password"
         app:layout_constraintStart_toStartOf="@+id/et_password"
         app:layout_constraintTop_toBottomOf="@+id/et_password" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/bt_login_google"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/bt_login"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/bt_login"
+        app:layout_constraintTop_toBottomOf="@+id/bt_login" />
 
     <ProgressBar
         android:id="@+id/progressBar"
