--- a/DVS_Mobile_Apps/app/src/main/res/layout/activity_login.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/activity_login.xml
@@ -64,6 +64,16 @@
         app:layout_constraintStart_toStartOf="@+id/bt_login"
         app:layout_constraintTop_toBottomOf="@+id/bt_login" />
 
+    <Button
+        android:id="@+id/bt_logout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/design_default_color_error"
+        android:text="Logout"
+        app:layout_constraintEnd_toEndOf="@+id/bt_login_google"
+        app:layout_constraintStart_toStartOf="@+id/bt_login_google"
+        app:layout_constraintTop_toBottomOf="@+id/bt_login_google" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
