--- a/DVS_Mobile_Apps/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/activity_welcome_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,32 +15,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="210dp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
             android:gravity="center"
             android:text="Welcome\nto"
-            android:textSize="30sp" />
+            android:textColor="@color/black"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_logo_dvs_foreground" />
+            android:id="@+id/imageView"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_logo_dvs_foreground" />
 
         <Button
             android:id="@+id/bt_continue"
-            android:text="Continue"
-            android:backgroundTint="@color/c1"
-            android:layout_marginTop="120dp"
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="120dp"
+            android:backgroundTint="@color/c1"
+            android:text="Continue" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
