--- a/DVS_Mobile_Apps/app/src/main/res/layout/fragment_profile.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/fragment_profile.xml
@@ -5,12 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.home.HomeActivity">
+    android:orientation="vertical"
+    tools:context=".ui.profile.ProfileFragment">
 
-    <FrameLayout
-        android:id="@+id/fl_home"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:text="Fragment Profile"
+                android:textColor="@color/black"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
@@ -18,8 +33,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:background="@color/c1"
-        app:itemIconTint="@color/bottom_nav_color"
-        app:itemTextColor="@color/bottom_nav_color"
         app:menu="@menu/menu_nav_bottom" />
+
 </RelativeLayout>
