--- a/DVS_Mobile_Apps/app/src/main/res/layout/activity_chat2.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/activity_chat2.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.chat.DetailChatActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tb_chat"
@@ -11,7 +12,8 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="wrap_content"
@@ -50,12 +52,110 @@
                 android:text="Online"
                 android:textColor="@color/white"
                 android:textAlignment="textStart"
+                android:visibility="invisible"
                 android:textSize="14sp"
                 android:textStyle="bold|normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
 
+    <LinearLayout
+        android:id="@+id/ll_01"
+        android:orientation="vertical"
+        android:layout_below="@+id/tb_chat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_chat"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        
+    </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/ll_02"
+        android:layout_above="@+id/ll_01"
+        android:layout_alignParentBottom="true"
+        android:weightSum="2"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+        <androidx.cardview.widget.CardView
+            app:cardUseCompatPadding="true"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="10dp"
+            android:padding="10dp"
+            android:layout_weight="2"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="8dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+            <LinearLayout
+
+                android:padding="8dp"
+                android:baselineAligned="false"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <EditText
+                        android:id="@+id/et_message_box"
+                        android:gravity="start"
+                        android:hint="Ask a question..."
+                        android:layout_gravity="center"
+                        android:textColorHint="#6C6C6C"
+                        android:paddingStart="5dp"
+                        android:layout_marginStart="5dp"
+                        android:paddingEnd="1dp"
+                        android:textSize="15sp"
+                        android:textStyle="bold"
+                        android:background="@android:color/transparent"
+                        android:padding="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <ImageView
+                    android:id="@+id/iv_attachment"
+                    app:tint = "#5c5c5c"
+                    android:layout_weight="3"
+                    android:padding="9dp"
+                    android:src="@drawable/baseline_attachment_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+                <ImageView
+                    android:id="@+id/iv_camera"
+                    app:tint = "#5c5c5c"
+                    android:layout_weight="3"
+                    android:padding="9dp"
+                    android:src="@drawable/baseline_photo_camera_24"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        
+        <ImageView
+            android:id="@+id/iv_send"
+            android:layout_gravity="center"
+            android:layout_marginEnd="9dp"
+            android:padding="12dp"
+            android:background="@color/c1"
+            app:tint="@color/white"
+            android:src="@drawable/baseline_send_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </RelativeLayout>
