--- a/DVS_Mobile_Apps/app/src/main/res/layout/fragment_settings.xml
+++ b/DVS_Mobile_Apps/app/src/main/res/layout/fragment_settings.xml
@@ -18,6 +18,12 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
+            <Button
+                android:id="@+id/bt_logout"
+                android:text="Logout"
+                android:backgroundTint="@color/design_default_color_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:text="Fragment Settings"
